--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,16 +4,14 @@ dnspython
 pandas
 numpy
 ensure
-pip==24.0
-wheel==0.42.0
-setuptools==69.0.3
+
 
 # dev requirements -
 
-pytest
-tox
-black
-flake8
-mypy
+pytest==7.1.3
+tox==3.25.1
+black==22.8.0
+flake8==5.0.4
+mypy==0.971
 
 -e .
